--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,7 @@ exclude = build,dist,venv
 max-complexity = 10
 
 [bdist_wheel]
-universal = 1
+universal = true
+
+[zest.releaser]
+create-wheel = yes
