Fix ansibilo ansible module/plugin installation

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,6 @@ classifiers =
 [options]
 zip_safe = False
 include_package_data = True
-packages = find:
 setup_requires =
     setuptools
 install_requires =
@@ -34,13 +33,11 @@ install_requires =
     graphviz
     humanize
     netaddr
+    requests
 
 [options.extras_require]
 sphinx =
     sphinx
-
-[options.packages.find]
-where = src
 
 [options.entry_points]
 console_scripts =
