--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ansibilo
-version = 0.3.dev0
+version = 0.3
 author = Polyconseil
 author_email = opensource+ansibilo@polyconseil.fr
 url = https://github.com/Polyconseil/ansibilo/
