--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,5 @@ prune docs
 prune tests
 global-exclude *.py[cod] __pycache__ *.so
 
-include Changelog.rst LICENSE README.rst
+include CHANGES.rst LICENSE README.rst
 exclude Makefile requirements-dev.txt tox.ini
