--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py35, py36, docs, quality
+envlist = py35, py36, py37, py38, docs, quality
 skip_missing_interpreters = True
 
 [testenv:docs]
@@ -17,4 +17,4 @@ whitelist_externals = make
 commands = make tests
 
 [tox:travis]
-3.6 = py36, docs, quality
+3.8 = py38, docs, quality
