--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ansibilo
-version = 0.5
+version = 0.6.dev0
 author = Polyconseil
 author_email = opensource+ansibilo@polyconseil.fr
 url = https://github.com/Polyconseil/ansibilo/
